--- a/.github/workflows/produntion-deploy.yml
+++ b/.github/workflows/produntion-deploy.yml
@@ -1,30 +1,30 @@
-name:"Deploy froentend to firebase"
+name: "Deploy frontend to Firebase"
+
 on:
   push:
-  branches:
-    - master
+    branches:
+      - master
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-    jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-      - uses: actions/checkout@master
       - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
 
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install dependencies
-      run: npm install
+      - name: Build frontend
+        run: npm run build
 
-    - name: Build frontend
-      run: npm run build
-
-    - name: Deploy to Firebase
-      uses: w9jds/firebase-action@master
-      with:
-        args: deploy --only hosting
-        project: "${{ secrets.ID_PROJETO }}"
-        token: "${{ secrets.FIREBASE_TOKEN }}"
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+          project: "${{ secrets.ID_PROJETO }}"
+          token: "${{ secrets.FIREBASE_TOKEN }}"
