corrigindo o FIREBASE_TOKEN

--- a/.github/workflows/produntion-deploy.yml
+++ b/.github/workflows/produntion-deploy.yml
@@ -26,5 +26,4 @@ jobs:
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
-          project: "${{ secrets.ID_PROJETO }}"
-          token: "${{ secrets.FIREBASE_TOKEN }}"
+          FIREBASE_TOKEN: "${{ secrets.FIREBASE_TOKEN }}"
