--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "dist/projeto-angular/browser",
+
     "ignore": [
       "firebase.json",
       "**/.*",
