--- a/.github/workflows/produntion-deploy.yml
+++ b/.github/workflows/produntion-deploy.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build frontend
-        run: npm run build
+      - name: Build frontend (Production)
+        run: ng build --configuration=production
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
@@ -28,4 +28,4 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: ${{ secrets.PROJECT_ID}}
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
