--- a/.github/workflows/produntion-deploy.yml
+++ b/.github/workflows/produntion-deploy.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           node-version: 22.13.0
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       - name: Install dependencies
         run: npm install
 
@@ -23,9 +26,4 @@ jobs:
         run: ng build --configuration=production
 
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: ${{ secrets.PROJECT_ID }}
+        run: firebase deploy --only hosting --token "${{ secrets.FIREBASE_TOKEN }}"
